unpackaged/main/default/objects/Billing_Schedule_Rule__c/Billing_Schedule_Rule__c.object-meta.xml
<CustomObject>
    <label>Billing Schedule Rule</label>
    <nameField>
        <label>Billing Schedule Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Schedule Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>