unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Billing Rule</description>
    <inlineHelpText>Description of the Billing Rule</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>