unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Digital_Billing_Calculation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Digital_Billing_Calculation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rule used to perform the calculation of the values for each record in the Billing Schedule</description>
    <inlineHelpText>The rule used to perform the calculation of the values for each record in the Billing Schedule</inlineHelpText>
    <label>Digital Billing Calculation Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Billing_Rule_Class__c.Rule_Type__c</field>
            <operation>equals</operation>
            <value>Digital Calculation Rule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Rule_Class__c</referenceTo>
    <relationshipLabel>Billing Schedule Rules (Digital Billing Calculation Rule)</relationshipLabel>
    <relationshipName>Billing_Schedule_Rules2</relationshipName>
    <type>Lookup</type>
</CustomField>