unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Digital_Billing_Date_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Digital_Billing_Date_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rule used to determine how date impacts the number of records in the schedule, and how many days should be billed in each individual record.</description>
    <inlineHelpText>The rule used to determine how date impacts the number of records in the schedule, and how many days should be billed in each individual record.</inlineHelpText>
    <label>Digital Billing Date Strategy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Billing_Rule_Class__c.Rule_Type__c</field>
            <operation>equals</operation>
            <value>Digital Date Strategy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Rule_Class__c</referenceTo>
    <relationshipLabel>Billing Schedule Rules (Digital Billing Date Strategy)</relationshipLabel>
    <relationshipName>Billing_Schedule_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>