unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Digital_Calculation_Class__c.field-meta.xml
<CustomField>
    <fullName>Digital_Calculation_Class__c</fullName>
    <formula>Digital_Billing_Calculation_Rule__r.Apex_Class_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital Calculation Class</label>
    <type>Text</type>
</CustomField>