unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Digital_Date_Strategy_Class__c.field-meta.xml
<CustomField>
    <fullName>Digital_Date_Strategy_Class__c</fullName>
    <formula>Digital_Billing_Date_Strategy__r.Apex_Class_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital Date Strategy Class</label>
    <type>Text</type>
</CustomField>