unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Print_Item_Rule__c.field-meta.xml
<CustomField>
    <fullName>Print_Item_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Print Item Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Billing_Rule_Class__c.Rule_Type__c</field>
            <operation>equals</operation>
            <value>Print Fulfilment factory</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Rule_Class__c</referenceTo>
    <relationshipLabel>Billing Schedule Rules (Print Item Factory)</relationshipLabel>
    <relationshipName>Billing_Schedule_Rules4</relationshipName>
    <type>Lookup</type>
</CustomField>