unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Print_Item_Rule_Class__c.field-meta.xml
<CustomField>
    <fullName>Print_Item_Rule_Class__c</fullName>
    <formula>Print_Item_Rule__r.Apex_Class_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Item Rule Class</label>
    <type>Text</type>
</CustomField>