unpackaged/main/default/objects/Billing_Schedule_Rule__c/fields/Schedule_Object__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Object__c</fullName>
    <formula>IF(RecordType.DeveloperName == &#39;Digital_Billing_Rule&#39;, &#39;CS_Billing_Schedule_Item__c&#39;, &#39;CS_Revenue_Schedule_Item__c&#39;)</formula>
    <label>Schedule Object</label>
    <type>Text</type>
</CustomField>