unpackaged/main/default/objects/Billing_Schedule_Rule__c/recordTypes/Digital_Billing_Rule.recordType-meta.xml
<RecordType>
    <fullName>Digital_Billing_Rule</fullName>
    <active>true</active>
    <description>Used for Digital Products (DFP etc)</description>
    <label>Digital Billing Rule</label>
</RecordType>