unpackaged/main/default/objects/Billing_Schedule_Rule__c/recordTypes/Print_Billing_Rule.recordType-meta.xml
<RecordType>
    <fullName>Print_Billing_Rule</fullName>
    <active>true</active>
    <description>Used for Print Products</description>
    <label>Print Billing Rule</label>
</RecordType>