unpackaged/main/default/objects/Billing_Schedule_Rule__c/recordTypes/Revenue_Recognition_Rule.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Recognition_Rule</fullName>
    <active>true</active>
    <description>Revenue Recognition Schedule rule</description>
    <label>Revenue Recognition Rule</label>
</RecordType>